<?xml version="1.0"?>
<package format="3">
  <name>st_servo_msg</name>
  <version>1.0.0</version>
  <description>
    Custom messages for controlling ST servos.
    Provides STServoCommand and STServoFeedback messages.
  </description>
  <maintainer email="cristidragomir97@gmail.com.com">Cristian Dragomir</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
<member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
